--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "populous:-sphere-engine-prototype",
+  "name": "orbshaman-v2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
